--- a/themes/hugo-academic/layouts/partials/widgets/contact.html
+++ b/themes/hugo-academic/layouts/partials/widgets/contact.html
@@ -82,6 +82,15 @@
         <a href="{{ . }}" target="_blank" rel="noopener">{{ i18n "book_appointment" | default "Book an appointment" }}</a>
       </li>
       {{ end }}
+      
+      {{ with $.Site.Params.twitter }}
+      <li>
+          <i class="fa-li fa fa-twitter fa-2x" aria-hidden="true"></i>
+  <span>
+          <a href="https://twitter.com/{{ . }}">{{ . }}</a>
+  </span>
+      </li>
+      {{ end }}
 
       {{/* Contact links. */}}
       {{ range site.Params.contact_links }}
